я хз рабочий ли editcontroller,